--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <h1>Website</h1>
         <p></p>
 
-        <p class="view"><a href="https://github.com/LydKo/website">View the Project on GitHub <small>LydKo/website</small></a></p>
-
+        <p class="view"><a href="https://github.com/LydKo/website">
 
       </header>
       <section>
