--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <header>
         <h1>Website</h1>
         <p></p>
+        
+        <a href="https://github.com/LydKo/website/edit/gh-pages/impressum.html</a>
 
         <p class="view"><a href="https://github.com/LydKo/website">
 
